--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="home-img">
           <div class="image-box">
-            <img src="./Assets/mohib-removebg-preview.png" alt="" />
+            <img src="./Assets/home.png" alt="" />
           </div>
         </div>
       </section>
