--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       as="style"
     />
-    <link rel="stylesheet" href="./new.css">
+    <link rel="stylesheet" href="./new.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -24,17 +24,17 @@
       <header class="animated">
         <a href="#" class="logo">Portfolio.</a>
         <div class="navbar">
-          <a href="#" class="active">Home</a>
-          <a href="#">About</a>
-          <a href="#">Portfolio</a>
-          <a href="#">Services</a>
-          <a href="#">Conatct</a>
+          <a href="#Home" class="active">Home</a>
+          <a href="#About">About</a>
+          <a href="#Portfolio">Portfolio</a>
+          <a href="#Services">Services</a>
+          <a href="#Contact" >Contact</a>
         </div>
       </header>
-      <section class="home animated">
+      <section id="Home" class="home section animated">
         <div class="home-detail">
           <h1>Mohib Ali</h1>
-          <h2>Frontend Developer</h2>
+          <h2>Frontend <span>Developer</span></h2>
           <div class="summary">
             <p>
               Proficient in HTML, CSS, JavaScript, and ReactJS for creating
@@ -43,7 +43,7 @@
               full-stack solutions.
             </p>
           </div>
-          
+
           <div class="download-social">
             <button class="btn" id="btn">Download CV</button>
             <div class="social-icons">
@@ -69,16 +69,55 @@
           </div>
         </div>
       </section>
+
+      <!-- Contact -->
+      <section id="Contact" class="contact section animated">
+        <div class="contact-container">
+          <div class="contact-box">
+            <h2>Let's Work Together</h2>
+            <p class="desc">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
+              non placeat quas consectetur debitis consequatur facilis est cum
+              exercitationem excepturi.
+            </p>
+            <div class="contact-detail">
+              <i class="ri-phone-fill"></i>
+              <div class="detail">
+                <p>Phone</p>
+                <p>(+92)-324-4213636</p>
+              </div>
+            </div>
+            <div class="contact-detail">
+              <i class="ri-mail-fill"></i>
+              <div class="detail">
+                <p>Email</p>
+                <p>alimohib025@gmail.com</p>
+              </div>
+            </div>
+            <div class="contact-detail">
+              <i class="ri-map-pin-2-fill"></i>
+              <div class="detail">
+                <p>Address</p>
+                <p>Allama Iqal Town, Lahore, Pakistan!</p>
+              </div>
+            </div>
+          </div>
+          <div class="contact-box">
+            <form action="">
+              <h2 class="heading" >Contact<span id="text"></span></h2>
+              <div class="field-box">
+                <input type="text" placeholder="Full Name" required>
+                <input type="email" placeholder="Email Address" required>
+                <input type="text" placeholder="Phone Number" required>
+                <input type="text" placeholder="Email Subject" required>
+                <textarea name="" id="" placeholder="Your Message" required></textarea>
+              </div>
+              <button type="submit" class="btn">Send Message</button>
+            </form>
+          </div>
+        </div>
+      </section>
     </div>
-    <script>
-      document.getElementById("btn").addEventListener("click", () => {
-        const link = document.createElement("a");
-        link.href = "./Assets/MohibResume.pdf";
-        link.download = "MohibResume.pdf";
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
